page 1iig jaahan hiiw

--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -1,3 +1,10 @@
+.container {
+  margin-top: 10px;
+}
+.Nav.Item {
+  margin-right: 70px;
+  padding-left: 30px;
+}
 .fa-light {
   width: 50px;
   height: 10px;
