--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,7 +1,22 @@
 $theme-colors: (
   "primary": #ff7800,
 );
+$position-values: (
+  13: 13%,
+  20: 20%,
+  25: 25%,
+  30: 30%,
+  40: 40%,
+  50: 50%,
+  60: 60%,
+  70: 70%,
+  80: 80%,
+  90: 90%,
+  100: 100%,
+);
+
 @import "~bootstrap/scss/bootstrap";
 
 @import "default";
 @import "components/header";
+@import "components/home_page";
