--- a/styles/components/_home_page.scss
+++ b/styles/components/_home_page.scss
@@ -17,37 +17,55 @@
 }
 .taco {
   position: absolute;
-  top: 20%;
+  top: 25%;
   left: 60%;
-}
-.vector_image {
-  width: 100%;
-  height: 100%;
 }
 .vector1 {
   position: absolute;
-  top: 12%;
+  top: 17%;
   left: 53%;
 }
 .vector {
   position: absolute;
-  top: 13%;
+  top: 18%;
   left: 52%;
 }
-.Frame_1{
+.Frame_1 {
   position: absolute;
-  top: 12%;
+  top: 17%;
   left: 35%;
 }
-.Frame_2{
-
+.Frame_2 {
   position: absolute;
-  top: 70%;
+  top: 75%;
   left: 80%;
 }
-.Frame_3{
-
+.Frame_3 {
   position: absolute;
-  top: 5%;
+  top: 10%;
   left: 60%;
+}
+.down {
+  top: 90%;
+  left: 10%;
+}
+.page-layout {
+  display: flex;
+  align-items: center;
+  height: 100vh;
+  overflow: hidden;
+  padding: 80px 0;
+}
+.radient {
+  position: absolute;
+  top: 70%;
+  left: 10%;
+}
+.banner {
+  .taco {
+    width: 368px;
+    .img-wrap {
+      aspect-ratio: 1 / 1;
+    }
+  }
 }
