--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -1,23 +1,3 @@
-.d-flex.justify-content-center{
-  height: 50px;
-}
-.div{
-  height: 50px;
-}
-.container {
-  margin-top: 10px;
-}
-.Nav.Item {
-  margin-right: 70px;
-  padding-left: 30px;
-}
-.fa-light {
-  width: 50px;
-  height: 10px;
-}
-.d-flex {
-  font-size: 14px;
-}
-.fa-light {
-  font-size: 24px;
+header {
+  width: 100vw;
 }
