--- a/styles/components/_products.scss
+++ b/styles/components/_products.scss
@@ -1,4 +1,67 @@
 .product_slider {
-  width: 200px;
-  height: 200px;
+  width: 800px;
+  height: 285px;
+}
+.frame {
+  padding: 5%;
+}
+.side-slide {
+  border-radius: 12px 12px 12px 12px;
+}
+
+.product_title {
+  font-size: 16px;
+  width: 147px;
+  height: 42px;
+}
+.product_doc {
+  width: 493px;
+  height: 207px;
+
+  /* Headline/H2 */
+  font-family: "Rubik";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 58px;
+  line-height: 69px;
+  letter-spacing: -0.5px;
+
+  /* On Surface/Black - High */
+  color: #1f2933;
+
+  /* Inside auto layout */
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+}
+.product_btn {
+  /* Button/Medium */
+  color: #1f2933;
+  font-family: "Rubik";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  /* identical to box height, or 125% */
+
+  text-align: center;
+  letter-spacing: 0.0125em;
+
+  /* Inside auto layout */
+
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+.side-title {
+  font-size: 12px;
+  color: white;
+  height: 40px;
+  width: 100%;
+}
+.slide_document {
+  font-size: 14px;
+}
+.slide-price {
+  color: #ff7800;
 }
